--- a/src/app/shared/components/blends/blends.component.scss
+++ b/src/app/shared/components/blends/blends.component.scss
@@ -9,15 +9,17 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  font-size: 1.8rem;
-  font-weight: 200;
-  color: white;
   border-radius: 15rem;
   // flex-shrink: 0;
 }
 
 .titulo {
   font-size: 2.5rem;
+  font-weight: 100;
+}
+
+.color-names {
+  font-size: 1rem;
   font-weight: 100;
 }
 
