--- a/src/app/shared/components/steps/steps.component.html
+++ b/src/app/shared/components/steps/steps.component.html
@@ -7,19 +7,19 @@
       <div class=" item-wrapper col-md-4 col-sm-12 d-flex flex-column align-items-center">
         <div class="align-self-center px-3 rounded-circle number text-center">1</div>
         <div class="text-center text">
-          Encuentra el producto adecuado para tu proyecto usando la guia de aplicaciones
+          Encuentra entre nuestros productos el objeto ideal para tu proyecto. 
         </div>
       </div>
       <div class="item-wrapper col-md-4 col-sm-12 d-flex flex-column align-items-center">
         <div class="align-self-center px-3 rounded-circle number text-center" >2</div>
         <div class="text-center text">
-          Contactanos y cuentanos los detalles de tu proyecto para que podamos ayudarte
+          Contactanos, envianos fotos, planos o referencias para que podamos ayudarte en tu diseño.
         </div>
       </div>
       <div class="item-wrapper col-md-4 col-sm-12 d-flex flex-column align-items-center">
         <div class="align-self-center px-3 rounded-circle number text-center">3</div>
         <div class="text-center text" >
-          Juntos lograremos crear un espacio sofisticado, elefante y especial
+          Juntos lograremos crear un espacio sofisticado, elegante y especial
         </div>
       </div>
     </div>
