--- a/src/app/shared/components/steps/steps.component.scss
+++ b/src/app/shared/components/steps/steps.component.scss
@@ -3,7 +3,7 @@
 }
 
 .number {
-  background-color: var(--green-dark);
+  background-color: var(--grey-light);
   color: white;
   font-size: 2rem;
 }
