--- a/src/app/shared/ui/footer/footer.component.html
+++ b/src/app/shared/ui/footer/footer.component.html
@@ -20,7 +20,7 @@
         <div class="text-center title">LINKS</div>
         <div class="text-center">
           <div><a class="links" [routerLink]="['/productos']">Productos</a></div>
-          <div><a class="links" [routerLink]="['/inspiracion']">Inspiracion</a></div>
+          <!-- <div><a class="links" [routerLink]="['/inspiracion']">Inspiracion</a></div> -->
           <div><a class="links" [routerLink]="['/nosotros']">Nosotros</a></div>
           <div><a class="links" [routerLink]="['/contacto']">Contacto</a></div>
         </div>
