--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -9,7 +9,7 @@
   --green-light: rgb(110, 187, 191);
   --light:       rgb(86.7%, 86.7%, 86.7%);
   --pink-light:  rgb(255, 42, 212);
-  --pink-dark:   rgb(255,42,255);
+  --pink-dark:   rgba(255, 42, 255, 0.678);
 
   // medidas
   --navbar-height: 60.19px;
