--- a/src/app/shared/ui/header/header.component.html
+++ b/src/app/shared/ui/header/header.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg fixed-top bg-transparent" 
-[ngClass]="{'navbar-dark': router.url === '/', 'navbar-light': !(router.url === '/'), 'expandedMobileLndg':isExpanded && router.url === '/', 'expandedMobile':isExpanded && !(router.url === '/')}"
+[ngClass]="{'navbar-dark': (router.url === '/' || router.url === '/nosotros'), 'navbar-light': !(router.url === '/' || router.url === '/nosotros'), 'expandedMobileLndg':isExpanded && router.url === '/', 'expandedMobile':isExpanded && !(router.url === '/')}"
 [@in]="scrollDir">
 
-  <a class="navbar-brand" [routerLink]="['/']">
-    <img [src]="router.url === '/' ? logoBlanco : logoNegro" width="100" alt="">
+  <a class="navbar-brand no-show" [ngClass]="{'no-show': router.url === '/'}" [routerLink]="['/']">
+    <img [src]="(router.url === '/' || router.url === '/nosotros') ? logoBlanco : logoNegro" width="100" alt="">
   </a>
   <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" 
   aria-controls="navbarNav" [attr.aria-expanded]="!isExpanded" aria-label="Toggle navigation" (click)="isExpanded = !isExpanded">
@@ -15,8 +15,11 @@
       <li class="nav-item" routerLinkActive="active" (click)="isExpanded = false">
         <a class="nav-link" [routerLink]="['/productos']">Productos</a>
       </li>
-      <li class="nav-item" routerLinkActive="active" (click)="isExpanded = false">
+      <!-- <li class="nav-item" routerLinkActive="active" (click)="isExpanded = false">
         <a class="nav-link" [routerLink]="['/inspiracion']">Inspiracion</a>
+      </li> -->
+      <li class="nav-item" routerLinkActive="active" (click)="isExpanded = false">
+        <a class="nav-link" [routerLink]="['/nosotros']">Nosotros</a>
       </li>
       <li class="nav-item" routerLinkActive="active" (click)="isExpanded = false">
         <a class="nav-link" [routerLink]="['/contacto']">Contacto</a>
