agregado componente bespoke. Solucionados detalles de CSS para mobiles

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="container text">
-      <div class="jumbotron jumbotron-fluid bg-transparent">
+      <div class="jumbotron jumbotron-fluid bg-transparent mb-0">
         <div class="container">
           <h1 class="title">¿Que es el terrazzo?</h1>
             <p>
@@ -31,7 +31,7 @@
               En Queo combinamos las tradicionales técnicas artesanales de la fabricación del terrazzo con nuevas tecnologías de aglomerado y pulido. Utilizamos mármoles, cuarzo, vidrios y otros minerales y compuestos para obtener un terrazzo moderno y de altas prestaciones.
             </p>
             <p>
-              El terrazzo nos permite diseñar piezas únicas, diferentes, verdaderas obras de art
+              El terrazzo nos permite diseñar piezas únicas, diferentes, verdaderas obras de arte.
             </p>
         </div>
       </div>
