--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -81,6 +81,8 @@ Como el template de cada slide se crea dinamicamente por el componente de ng-boo
   <app-terrazzo></app-terrazzo>
 </div>
 
+<app-bespoke></app-bespoke>
+
 <app-steps></app-steps>
 
 
