--- a/src/app/products/product/product.component.html
+++ b/src/app/products/product/product.component.html
@@ -1,6 +1,6 @@
-<div class="prod-wrapper container-fluid p-0" *ngIf="product">
+<div class="wrapper container-fluid p-0" *ngIf="product">
   
-  <div class="py-5 bg-light">
+  <div class="prod-wrapper bg-light">
     <div class="container">
       <div class="row">
 
