--- a/src/app/shared/components/terrazzo/terrazzo.component.html
+++ b/src/app/shared/components/terrazzo/terrazzo.component.html
@@ -9,6 +9,6 @@
     <div class="botones">
     <app-cta-buttons [changeTheme]="true" [primary]="true" (prim)="router.navigate(['/productos'])"
     [terciary]="true" [tText]="'Conocer +'" (ter)="router.navigate(['/nosotros'])"
-    [vertical]="true"></app-cta-buttons>
+    [vertical]="false"></app-cta-buttons>
   </div>
 </div>
