--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,10 +1,16 @@
 
-.container-fluid {
-  min-height: 100%;
-}
+// .container-fluid {
+//   min-height: 100%;
+// }
+
+// .carousel-wrapper {
+//   height: 100%;
+//   background-color: white;
+// }
 
 .carousel-wrapper {
-  height: 100%;
+  // height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   background-color: white;
 }
 
