--- a/src/app/shared/components/bespoke/bespoke.component.scss
+++ b/src/app/shared/components/bespoke/bespoke.component.scss
@@ -42,6 +42,11 @@
     padding-right: 3rem;
   }
 
+  .title {
+    font-size: 2rem;
+    padding-top: 1rem;
+  }
+
   .text{
     font-size: 1rem;
     // padding: 1rem 3rem 1rem 3rem;
