agregado transicion entre pre-render y app. mejoras en CSS

--- a/src/app/products/product/product.component.html
+++ b/src/app/products/product/product.component.html
@@ -22,7 +22,7 @@
         <div class="prod-data col-sm-12 col-md-5">
           <form [formGroup]="buyForm" (ngSubmit)="submit()">
             <div class="row">
-              <div class="title col-auto">{{ product.name }} </div>
+              <div class="title col-12">{{ product.name }} </div>
             </div>
             <div class="row mb-3">
               <div class="price col-auto">$ {{ currentFormat.price }} </div>
