--- a/src/app/products/prod-menu/prod-menu.component.html
+++ b/src/app/products/prod-menu/prod-menu.component.html
@@ -1,41 +1,46 @@
 
-<div class="title-wrapper jumbotron mb-0 pb-0 bg-transparent">
-  <div class="container">
-    <p class="sub-title">Diseñados para sorprender. Fabricados con maxima dedicacion. Llevamos el estudio de los materiales a su mayor exponente</p>
-    <div class="collection-menu d-flex">
-      <div class="col-title" *ngFor="let col of (collections | toArray)  | sort:'order':true:false"
-      (click)="scrollCol(col.colName)" >
-        {{ col.colName }}
+<div class="wrapper">
+
+  <div class="title-wrapper jumbotron my-0 py-0 bg-transparent">
+    <div class="container">
+      <div class="sub-title">Diseñados para sorprender. Fabricados con maxima dedicacion. Llevamos el estudio de los materiales a su mayor exponente</div>
+      <div class="collection-menu d-flex">
+        <div class="col-title" *ngFor="let col of (collections | toArray)  | sort:'order':true:false"
+        (click)="scrollCol(col.colName)" >
+          {{ col.colName }}
+        </div>
       </div>
     </div>
   </div>
-</div>
-
-<div class="jumbotron jumbotron-fluid mb-0 pt-3 bg-light">
-  <div class="container">
-    <div class="collection-menu">
-      <div class="col-title2" *ngFor="let col of (collections | toArray) | sort:'order':true:false">
-        <div [id]="col.colName" class="col-title-line d-flex align-items-center">
-          <span class="pr-3"> {{ col.colName }} </span> <hr class="my-4 w-100">
-        </div>
-
-        <div class="d-flex product-container">
-          <div *ngFor="let prod of (col.products | toArray) | sort:'order':true:false" class="prod" (click)="routeTo(col.$key, prod.$key)">
-            <div class="spinner-wrapper d-flex align-items-center">
-              <div class="text-center w-100 spinner">
-                <fa-icon class="icons p-3" [icon]="spinner" [spin]="true"></fa-icon>
+  
+  <div class="jumbotron jumbotron-fluid mb-0 pt-3 bg-light">
+    <div class="container">
+      <div class="collection-menu">
+  
+        <div class="col-title2" *ngFor="let col of (collections | toArray) | sort:'order':true:false">
+  
+          <div [id]="col.colName" class="col-title-line d-flex align-items-center">
+            <span class="pr-3"> {{ col.colName }} </span> <hr class="my-4 w-100">
+          </div>
+  
+          <div class="d-flex product-container">
+            <div *ngFor="let prod of (col.products | toArray) | sort:'order':true:false" class="prod" (click)="routeTo(col.$key, prod.$key)">
+              <div class="spinner-wrapper d-flex align-items-center">
+                <div class="text-center w-100 spinner">
+                  <fa-icon class="icons p-3" [icon]="spinner" [spin]="true"></fa-icon>
+                </div>
+              </div>
+              <div class="background" 
+              [ngStyle]="{'background-image': 'url(' + prod.bgImg + ')'}"></div>
+              <div class="text-wrapper d-flex align-items-end">
+                <div class="text-center w-100 prod-name"> {{ prod.name }} </div>
               </div>
             </div>
-            <div class="background" 
-            [ngStyle]="{'background-image': 'url(' + prod.bgImg + ')'}"></div>
-            <div class="text-wrapper d-flex align-items-end">
-              <div class="text-center w-100 prod-name"> {{ prod.name }} </div>
-            </div>
           </div>
+  
         </div>
-
       </div>
     </div>
-    
   </div>
+
 </div>
