--- a/src/app/products/prod-menu/prod-menu.component.scss
+++ b/src/app/products/prod-menu/prod-menu.component.scss
@@ -1,4 +1,8 @@
 
+.wrapper {
+  margin-top: var(--navbar-height);
+}
+
 .sub-title {
   font-size: 2rem;
   font-weight: 100;
@@ -72,7 +76,24 @@
   color: black;
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 800px) {
+  
+  .sub-title {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 500px) {
+
+  .title {
+    font-size: 2rem;
+    font-weight: 130;
+    color: white;
+  }
+
+  .sub-title {
+    font-size: 0.95rem;
+  }
 
   .product-container{
     flex-direction: column;
@@ -83,17 +104,21 @@
   .prod {
     margin: 1rem auto 1rem auto;
   }
+  
+}
 
-  .title {
-    font-size: 2rem;
-    font-weight: 130;
-    color: white;
-  }
+@media (max-width: 325px) {
 
   .sub-title {
-    margin-top: 5vh;
-    font-size: 2.3vh;
-    font-weight: 100;
+    font-size: 0.8rem;
   }
 
- }
+  .col-title {
+    font-size: 0.9rem;
+    margin: 0.5rem 0.5rem 0.5rem 0rem;
+  }
+
+  .col-title-line {
+    font-size: 0.9rem;
+  }
+}
