--- a/src/app/shared/components/cta-buttons/cta-buttons.component.html
+++ b/src/app/shared/components/cta-buttons/cta-buttons.component.html
@@ -1,16 +1,16 @@
 <div class="button-wrapper" [ngClass]="{ 'button-wrapper-start': buttonsStart, 'button-wrapper-v': vertical }">
   <div class="first-button" [ngClass]="{ 'first-button-v': vertical }" *ngIf="primary" >
-    <button type="button" class="btn btn-lg botonComprar" (click)="getPim()" >
+    <button [id]="pId" type="button" class="btn btn-lg botonComprar" (click)="getPim()" >
       {{ pText || data.primary }}
     </button>
   </div>
   <div class="button" [ngClass]="{ 'button-v': vertical }" *ngIf="secondary">
-    <button [ngClass]="{ 'botonConocer': lightTheme }" type="button" class="btn btn-lg btn-outline-secondary" (click)= "getSec()">
+    <button [id]="sId" [ngClass]="{ 'botonConocer': lightTheme }" type="button" class="btn btn-lg btn-outline-secondary" (click)= "getSec()">
         {{ sText || data.secondary }}
     </button>   
   </div>
   <div class="button" [ngClass]="{ 'button-v': vertical }" *ngIf="terciary">
-    <button [ngClass]="{ 'botonConocer': lightTheme }"  type="button" class="btn btn-lg btn-outline-secondary" (click)= "getTer()">
+    <button [id]="tId" [ngClass]="{ 'botonConocer': lightTheme }"  type="button" class="btn btn-lg btn-outline-secondary" (click)= "getTer()">
         {{ tText || terButton }}
     </button>
   </div>
