--- a/src/app/products/product/product.component.html
+++ b/src/app/products/product/product.component.html
@@ -60,15 +60,30 @@
             </div>
 
             <div class="form-group row">
-              <label class="col-lg-3 col-form-label"> Cantidad </label>
-              <div class="col-auto">
-                <input type="number" class="form-control qty" formControlName="qty">
-              </div>
+              <!-- <div class="col-lg-10">
+                <div class="row"> -->
+                  <label class="col-lg-3 col-form-label"> Cantidad </label>
+                  <!-- <label class="col-auto col-form-label"> Cantidad </label> -->
+                  <div class="col-lg-7 pl-3">
+                    <div class="row">
+                      <div class="col-auto pr-0">
+                        <button type="button" class="btn btn-outline-dark botonQty" (click)= "sub()" [disabled]="buyForm.controls['qty'].value === 1">-</button>
+                      </div>
+                      <div class="col-auto">
+                        <input type="number" class="form-control qty" formControlName="qty">
+                      </div>
+                      <div class="col-auto pl-0">
+                        <button type="button" class="btn btn-outline-dark botonQty" (click)= "add()">+</button>
+                      </div>
+                    </div>
+                  </div>
+                <!-- </div>
+              </div> -->
             </div>
 
             <div class="form-group row mt-4">
               <div class="col-lg-10">
-                <button type="button" class="btn btn-lg botonComprar" (click)= "buy()" [disabled]="!buyForm.valid">Comprar</button>
+                <button type="button" class="btn btn-lg btn-block botonComprar" (click)= "buy()" [disabled]="!buyForm.valid">Comprar</button>
               </div>
             </div>
 
