--- a/src/app/shared/components/blends/blends.component.html
+++ b/src/app/shared/components/blends/blends.component.html
@@ -1,6 +1,7 @@
 <div class="jumbotron jumbotron-fluid mb-0 bg-white">
   <div class="container">
-    <div class="titulo mb-4">Descubre nuestros blends</div>
+    <div class="titulo mb-1">Descubre nuestros blends</div>
+    <div class="colorText mb-4">Consultanos por colores especiales o a medida</div>
     <div class=" color-container d-flex">
       <div *ngFor="let color of colors" class="align-self-center d-flex flex-column align-items-center">
         <div  class="color mx-3 mt-3 mb-1" 
