--- a/src/app/shared/components/blends/blends.component.scss
+++ b/src/app/shared/components/blends/blends.component.scss
@@ -23,12 +23,22 @@
   font-weight: 100;
 }
 
+.colorText {
+  font-size: 1.1rem;
+  font-weight: 100;
+  color: var(--grey);
+}
+
 @media (max-width: 744px) {
 
   .color-container {
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: center;
+  }
+
+  .colorText {
+    font-size: 1rem;
   }
 
 }
