arreglos para que se vea mejor el formulario de compra y de seleccion de producto. En desktop y en mobile

--- a/src/app/shared/components/bespoke/bespoke.component.html
+++ b/src/app/shared/components/bespoke/bespoke.component.html
@@ -8,7 +8,7 @@
         <div class="text">{{ data.text }}</div>
         <div class="buttons">
           <app-cta-buttons 
-            [primary]="true" [pText]="'Agendar'" [pId]="agendar"
+            [primary]="true" [pText]="'Agendar'" [pId]="'agendar'"
             [changeTheme]="false"
             (prim)="contact()" [buttonsStart]="true">
           </app-cta-buttons>
