--- a/src/app/products/product/product.component.html
+++ b/src/app/products/product/product.component.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="prod-data col-sm-12 col-md-5">
-          <form [formGroup]="buyForm" (ngSubmit)="submit()">
+          <form [formGroup]="buyForm" (ngSubmit)="submit()" class="px-lg-5">
             <div class="row">
               <div class="title col-12">{{ product.name }} </div>
             </div>
@@ -30,16 +30,16 @@
             <div class="form-group row" *ngIf="product.format.length > 1">
    
    
-              <label class="col-lg-3 col-form-label">Formato</label>
-              <div class="col-lg-7">
+              <label class="col-3 col-form-label">Formato</label>
+              <div class="col-9">
                 <select class="form-control" formControlName="format">
                   <option *ngFor="let formatP of product.format | toArray" [ngValue]="formatP"> {{ formatP.name }} </option>
                 </select>
               </div>
             </div>
             <div class="form-group row" *ngIf="!currentFormat.set">
-              <label class="col-lg-3 col-form-label">Color</label>
-              <div class="col-lg-7">
+              <label class="col-3 col-form-label">Color</label>
+              <div class="col-9">
                 <select class="form-control" formControlName="color">
                   <option *ngFor="let colorObj of currentFormat.colors | toArray" [ngValue]="colorObj"> {{ colors[colorObj.name].name }} </option>
                 </select>
@@ -48,8 +48,8 @@
             <div *ngIf="currentFormat.set" formArrayName="set">
               <div *ngFor="let size of setControls.controls; let i=index">
                 <div class="form-group row">
-                  <label class="col-lg-3 col-form-label">{{ currentFormat.set.sizes[i] }} </label>
-                  <div class="col-lg-7">
+                  <label class="col-3 col-form-label">{{ currentFormat.set.sizes[i] }} </label>
+                  <div class="col-9">
                     <select class="form-control" [formControlName]="i">
                       <option *ngFor="let colorObj of currentFormat.colors | toArray" [ngValue]="colorObj"> {{ colors[colorObj.name].name }} </option>
                     </select>
@@ -60,11 +60,11 @@
             </div>
 
             <div class="form-group row">
-              <!-- <div class="col-lg-10">
+              <!-- <div class="col-10">
                 <div class="row"> -->
-                  <label class="col-lg-3 col-form-label"> Cantidad </label>
+                  <label class="col-3 col-form-label"> Cantidad </label>
                   <!-- <label class="col-auto col-form-label"> Cantidad </label> -->
-                  <div class="col-lg-7 pl-3">
+                  <div class="col-9 pl-3">
                     <div class="row">
                       <div class="col-auto pr-0">
                         <button type="button" class="btn btn-outline-dark botonQty" (click)= "sub()" [disabled]="buyForm.controls['qty'].value === 1">-</button>
@@ -82,8 +82,8 @@
             </div>
 
             <div class="form-group row mt-4">
-              <div class="col-lg-10">
-                <button type="button" class="btn btn-lg btn-block botonComprar" (click)= "buy()" [disabled]="!buyForm.valid">Comprar</button>
+              <div class="col-12">
+                <button id="comprar" type="button" class="btn btn-lg btn-block botonComprar" (click)="buy()" [disabled]="!buyForm.valid">Comprar</button>
               </div>
             </div>
 
