--- a/src/app/shared/components/buy-modal/buy-modal.component.html
+++ b/src/app/shared/components/buy-modal/buy-modal.component.html
@@ -45,8 +45,8 @@
   <form [formGroup]="myForm" novalidate (ngSubmit)="submit()">
 
     <div class="form-group row">
-      <label class="text-muted col-sm-2 col-form-label" for="nombre">Nombre</label>
-      <div class="col-sm-10">
+      <label class="text-muted col-3 col-lg-2 col-form-label" for="nombre">Nombre</label>
+      <div class="col-9 col-lg-10">
         <input type="text" formControlName="name" class="form-control"
         [ngClass]="{'missing': myForm.controls.name.invalid && (myForm.controls.name.dirty || myForm.controls.name.touched)}">
       </div>
@@ -54,7 +54,7 @@
 
     <!-- indicacion que falta el nombre -->
     <div *ngIf="myForm.controls.name.invalid && (myForm.controls.name.dirty || myForm.controls.name.touched)" class="row">
-      <div *ngIf="myForm.controls.name.errors.required" class="col-sm-10 offset-sm-2">
+      <div *ngIf="myForm.controls.name.errors.required" class="col-9 col-lg-10 offset-md-3 offset-lg-2">
         <!-- <ngb-alert [dismissible]="false" [type]="'light'">
           ¡Nos falta tu nombre!
         </ngb-alert> -->
@@ -63,8 +63,8 @@
     </div>
 
     <div class="form-group row">
-      <label class="text-muted col-sm-2 col-form-label" for="tel">Telefono</label>
-      <div class="col-sm-10">
+      <label class="text-muted col-3 col-lg-2 col-form-label" for="tel">Telefono</label>
+      <div class="col-9 col-lg-10">
         <input type="tel" formControlName="telephone" class="form-control"
         [ngClass]="{'missing': myForm.controls.telephone.invalid && (myForm.controls.telephone.dirty || myForm.controls.telephone.touched)}">
       </div>
@@ -72,7 +72,7 @@
 
     <!-- indicacion falta telefono -->
       <div *ngIf="myForm.controls.telephone.invalid && (myForm.controls.telephone.dirty || myForm.controls.telephone.touched)" class="row">
-      <div *ngIf="myForm.controls.telephone.errors.required" class="col-sm-10 offset-sm-2">
+      <div *ngIf="myForm.controls.telephone.errors.required" class="col-9 col-lg-10 offset-md-3 offset-lg-2">
         <!-- <ngb-alert [dismissible]="false" [type]="'light'">
           Necesitamos saber tu numero de telefono para contactarte
         </ngb-alert> -->
@@ -81,8 +81,8 @@
     </div>
     
     <div class="form-group row">
-      <label class="text-muted col-sm-2 col-form-label" for="email">E-mail</label>
-      <div class="col-sm-10">
+      <label class="text-muted col-3 col-lg-2 col-form-label" for="email">E-mail</label>
+      <div class="col-9 col-lg-10">
         <input type="e-mail" formControlName="email" class="form-control" id="email" aria-describedby="emailHelp"
         [ngClass]="{'missing': myForm.controls.email.invalid && (myForm.controls.email.dirty || myForm.controls.email.touched)}">
       </div>
@@ -90,7 +90,7 @@
 
     <!-- indicacion falta mail -->
       <div *ngIf="myForm.controls.email.invalid && (myForm.controls.email.dirty || myForm.controls.email.touched)" class="row">
-      <div *ngIf="myForm.controls.email.errors.required" class="col-sm-10 offset-sm-2">
+      <div *ngIf="myForm.controls.email.errors.required" class="col-9 col-lg-10 offset-md-3 offset-lg-2">
         <!-- <ngb-alert [dismissible]="false" [type]="'light'">
           Necesitamos saber tu e-mail para contactarte
         </ngb-alert> -->
@@ -99,8 +99,8 @@
     </div>
 
     <div class="form-group row">
-      <label class="text-muted col-sm-2 col-form-label" for="textArea">Observaciones</label>
-      <div class="col-sm-10">
+      <label class="text-muted col-lg-2 col-form-label" for="textArea">Observaciones</label>
+      <div class="col-lg-10">
         <textarea formControlName="obs" class="form-control" id="textArea" rows="3"></textarea>
       </div>
     </div>
