agregado firebase functions para aviso de consultas y compras

--- a/src/app/shared/components/buy-modal/buy-modal.component.html
+++ b/src/app/shared/components/buy-modal/buy-modal.component.html
@@ -101,7 +101,7 @@
     <div class="form-group row">
       <label class="text-muted col-lg-2 col-form-label" for="textArea">Observaciones</label>
       <div class="col-lg-10">
-        <textarea formControlName="obs" class="form-control" id="textArea" rows="3"></textarea>
+        <textarea formControlName="query" class="form-control" id="textArea" rows="3"></textarea>
       </div>
     </div>
 
