--- a/src/app/products/prod-menu/prod-menu.component.scss
+++ b/src/app/products/prod-menu/prod-menu.component.scss
@@ -23,8 +23,8 @@
 }
 
 .prod {
-  height: 15rem;
-  width: 15rem;
+  height: 21rem;
+  width: 21rem;
   position: relative;
   margin: 1rem;
 }
@@ -121,4 +121,10 @@
   .col-title-line {
     font-size: 0.9rem;
   }
+
+  .prod {
+    height: 15rem;
+    width: 15rem;
+  }
 }
+
