--- a/src/app/products/product/product.component.scss
+++ b/src/app/products/product/product.component.scss
@@ -109,22 +109,22 @@ select {
 
 .botonComprar {
 	color: white;
-	background-color: var(--pink-dark);
-	border-color: var(--pink-dark);
+	background-color: var(--green-dark);
+	border-color: var(--green-dark);
 }
 
 .botonComprar:hover {
 	color: white;
-	background-color: var(--pink-light);
-	border-color: var(--pink-light);
+	background-color: var(--green-light);
+	border-color: var(--green-light);
 	cursor: pointer;
 }
 
 .botonComprar:active {
   color: white;
-  background-color: var(--pink-light);
-	border-color: var(--pink-light);
-  box-shadow: 0 0 0 0.2rem hsla(290, 100%, 50%, 0.5);
+  background-color: var(--green-light);
+	border-color: var(--green-light);
+  box-shadow: 0 0 0 0.2rem var(--green-dark);
 }
 
 .especificaciones {
