--- a/src/app/shared/components/buy-modal/buy-modal.component.scss
+++ b/src/app/shared/components/buy-modal/buy-modal.component.scss
@@ -22,22 +22,22 @@
 
 .botonComprar {
 	color: white;
-	background-color: hsla(300, 100%, 50%, 1);
-	border-color: hsla(300, 100%, 50%, 1);
+	background-color: var(--green-dark);
+	border-color: var(--green-dark);
 }
 
 .botonComprar:hover {
 	color: white;
-	background-color: hsla(290, 100%, 50%, 1);
-	border-color: hsla(290, 100%, 50%, 1);
+	background-color: var(--green-light);
+	border-color: var(--green-light);
 	cursor: pointer;
 }
 
 .botonComprar:active {
   color: #fff;
-  background-color: hsla(290, 100%, 50%, 1);
-	border-color: hsla(290, 100%, 50%, 1);
-  box-shadow: 0 0 0 0.2rem hsla(290, 100%, 50%, 0.5);
+  background-color: var(--green-light);
+	border-color: var(--green-light);
+  box-shadow: 0 0 0 0.2rem var(--green-dark);
 }
 
 .missing-text {
