--- a/src/app/shared/components/cta-buttons/cta-buttons.component.scss
+++ b/src/app/shared/components/cta-buttons/cta-buttons.component.scss
@@ -6,22 +6,22 @@
 
 .botonComprar {
 	color: white;
-	background-color: var(--pink-dark);
-	border-color: var(--pink-dark);
+	background-color: var(--green-dark);
+	border-color: var(--green-dark);
 }
 
 .botonComprar:hover {
 	color: white;
-	background-color: var(--pink-light);
-	border-color: var(--pink-light);
+	background-color: var(--green-light);
+	border-color: var(--green-light);
 	cursor: pointer;
 }
 
 .botonComprar:active {
   color: white;
-  background-color: var(--pink-light);
-	border-color: var(--pink-light);
-  box-shadow: 0 0 0 0.2rem hsla(290, 100%, 50%, 0.5);
+  background-color: var(--green-light);
+	border-color: var(--green-light);
+  box-shadow: 0 0 0 0.2rem var(--green-dark);
 }
 
 .botonConocer {
