modificado el logo + un poco de limpieza

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -25,10 +25,10 @@
           <div>
           </div>
             <p>
-              Queo es un proyecto nacido de <a class="link" href="https://www.quadri.com.ar">Quadri</a>, empresa pionera en la producción de baldosas de terrazzo en la Argentina. <a class="link" href="https://www.quadri.com.ar">Quadri</a> se estableció en Buenos Aires en 1861. Sus fundadores trajeron desde Lugano, Suiza, el oficio y técnica del terrazzo.
+              Queo es una marca de <a class="link" href="https://www.quadri.com.ar">Quadri</a>, empresa pionera en la producción producto de terrazzo en la Argentina. <a class="link" href="https://www.quadri.com.ar">Quadri</a> se estableció en Buenos Aires en 1861. Sus fundadores trajeron desde Lugano, Suiza, el oficio y técnica del terrazzo.
             </p>
             <p>
-              En Queo combinamos las tradicionales técnicas artesanales de la fabricación del terrazzo con nuevas tecnologías de aglomerado y pulido. Utilizamos mármoles, cuarzo, vidrios y otros minerales y compuestos para obtener un terrazzo moderno y de altas prestaciones.
+              En <a class="link" href="https://www.quadri.com.ar">Quadri</a> combinamos las tradicionales técnicas artesanales de la fabricación del terrazzo con nuevas tecnologías de aglomerado y pulido. Utilizamos mármoles, cuarzo, vidrios y otros minerales y compuestos para obtener un terrazzo moderno y de altas prestaciones.
             </p>
             <p>
               El terrazzo nos permite diseñar piezas únicas, diferentes, verdaderas obras de arte.
