--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -9,7 +9,7 @@
           <fa-icon [icon]="telephone"></fa-icon>&nbsp;+54 11 4861 0450
         </div>
         <div class="px-3">
-          <fa-icon [icon]="envelope"></fa-icon>&nbsp;<a style="color: #212529;" [href]="'mailto:info@queo.com.ar'">info@queo.com.ar</a>
+          <fa-icon [icon]="envelope"></fa-icon>&nbsp;<a style="color: #212529;" [href]="'mailto:info@queo.com.ar'">info@quadri.com.ar</a>
         </div>
       </div>
       <div>
@@ -39,7 +39,7 @@
       <agm-map *ngIf="showMap" class="" [latitude]="lat" [longitude]="lng" [zoom]=17 [scrollwheel] = false>
         <agm-marker #map class="mapa" [latitude]="lat" [longitude]="lng">
             <agm-info-window [isOpen]="true">
-              <strong>Queo</strong><br>
+              <strong>Quadri</strong><br>
               11 4861 0450 <br>
               Gascon 483 <br>
               Estacionamiento libre para clientes
