--- a/src/app/shared/ui/footer/footer.component.html
+++ b/src/app/shared/ui/footer/footer.component.html
@@ -9,7 +9,7 @@
             <fa-icon [icon]="telephone"></fa-icon>&nbsp; +54 11 4861 0450
           </div>
           <div>
-            <fa-icon [icon]="envelope"></fa-icon>&nbsp; <a style="color: #ddd;" [href]="'mailto:info@quadri.com.ar'">info@queo.com.ar</a>
+            <fa-icon [icon]="envelope"></fa-icon>&nbsp; <a style="color: #ddd;" [href]="'mailto:info@quadri.com.ar'">info@quadri.com.ar</a>
           </div>
             <div class="d-inline-block pl-1">
               <fa-icon [icon]="map"></fa-icon>&nbsp; Gascon 483 <br> Ciudad Autonoma de Buenos Aires <br> CP C1181ACG, Argentina
@@ -28,13 +28,17 @@
       <div class="col-md-4 d-flex flex-column social text-center mb-2 mobileWidth">
         <div class="text-center title">SEGUINOS</div>
         <div class="d-flex justify-content-center">
+          <a class="links" href="https://www.instagram.com/quadribsas/">
+            <fa-icon class="networks p-3" [icon]="instagram"></fa-icon>
+          </a>
+          <a class="links" href="https://ar.pinterest.com/quadribsas//">
+            <fa-icon class="networks p-3" [icon]="pinterest"></fa-icon>
+          </a>
           <a class="links" href="https://www.facebook.com/queobsas/">
             <fa-icon class="networks p-3" [icon]="facebook"></fa-icon>
           </a>
-          <a class="links" href="https://www.instagram.com/queobsas/">
-            <fa-icon class="networks p-3" [icon]="instagram"></fa-icon>
-          </a>
         </div>
+        <div class="mt-3 ofertas text-center" (click)="captureMail()">ofertas especiales</div>
       </div>
     </div>
     
